--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - ../magirani_admin:/app
       - ../logs/django:/app/logs
       - ../logs/django_bot:/app/club_bot/bot_log
-
+      - ../storage:/app/storage
     restart: unless-stopped
     ports:
       - "8000:8000"
@@ -53,6 +53,7 @@ services:
     volumes:
       - ../bot:/app
       - ../logs/bot:/app/logs
+      - ../storage:/app/storage
     restart: unless-stopped
     depends_on:
       - db
