--- a/docker/dockerfiles/DockerfileWeb
+++ b/docker/dockerfiles/DockerfileWeb
@@ -11,3 +11,4 @@ COPY /magirani_admin .
 EXPOSE 8000
 
 CMD ["sh", "-c", "python manage.py makemigrations && python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
+#CMD ["sh", "-c", "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
